[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://sprites/heart.png" type="Texture" id=2]
[ext_resource path="res://fonts/toybox_2/ToyBox.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Heart1" type="Sprite" parent="."]
position = Vector2( 872, 32 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
offset = Vector2( -32, 0 )

[node name="Heart2" type="Sprite" parent="."]
position = Vector2( 923, 32 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
offset = Vector2( -32, 0 )

[node name="Heart3" type="Sprite" parent="."]
position = Vector2( 974, 32 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
offset = Vector2( -32, 0 )

[node name="Message" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -44.0
margin_right = 192.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -36.0
margin_right = 180.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
